--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 }
 
 header {
-    background-color: #49074c;
+    background-color: #2c1ace;
     color: #fff;
     text-align: center;
     padding: 20px;
